--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+
+.nav-head {
+    position: fixed;
+    /* top: 0;
+    left: 0; */
+    margin-left: -1vw;
+    width: 100vw;
+    z-index: 9999;
+    background-color: var(--body_background);
+    top: 0;
+    color: var(--body_color);
+    border-bottom: solid 3px var( --border_bottom_color);
+}
+.link-header {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 100%;
+    max-width: 100vw; /* Adjust as needed */
+    margin: 0 auto; /* Center the container */
+    box-sizing: border-box;
+    height: 13vh;
+    padding-top: 4vh;
+    list-style-type: none;
+}
+.dropdown {
+    display: none;
+}
+.link-name a {
+    text-decoration: none;
+    color: gold;
+    font-size: 2vw;
+    margin-right: 20vw;
+    margin-left: 20vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.link-about a {
+    text-decoration: none;
+    color: gold;
+    font-size: 1.5vw;
+    margin-right: 5vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.link-contact a {
+    text-decoration: none;
+    color: gold;
+    font-size: 1.5vw;
+    margin-right: 5vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.link-projects a {
+    text-decoration: none;
+    color: gold;
+    font-size: 1.5vw;
+    margin-right: 5vw;
 }
 
-.App-link {
-  color: #61dafb;
+.saver {
+    margin-left: 4vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (max-width:768px){
+    .dropdown {
+        display: block;
+        margin-left: 5vw;
+    }
+    .saver {
+        margin-left: 4vw;
+    }
+
+    .link-about {
+        display: none;
+    }
+    .bot {
+        margin-left: -6vw;
+    }
+    .link-contact {
+        display: none;
+    }
+    .link-projects {
+        display: none;
+        }
+    .link-name {
+        margin-left: 7vw;
+
+    }
+    .link-name a:hover {
+        color: lightgoldenrodyellow;
+        font-size: 2.1vw;
+    }
+    .line-header{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 100%;
+    max-width: 100vw; /* Adjust as needed */
+    margin: 0 auto; /* Center the container */
+    box-sizing: border-box;
+    height: 13vh;
+    padding-top: 4vh;
+    list-style-type: none;
+    }
 }
