--- a/src/Projects.css
+++ b/src/Projects.css
@@ -22,6 +22,7 @@
 .project-body {
     margin: 1em 0 auto;
     text-align: justify;
+    padding-bottom: 2vh;
     line-height: 4vh;
     color: var(--body_color);
 }
@@ -93,6 +94,7 @@
     width: 25vw;
     margin-left: 15vw;
     margin-top: 5vh;
+    margin-bottom: 8vh;
 }
 
 .drum:hover {
