--- a/src/About.css
+++ b/src/About.css
@@ -23,3 +23,21 @@
     line-height: 3vw;
     color: var(--body_color);
 }
+
+@media (max-width: 1100px) {
+    .about-content {
+        padding-top: 20vh; /* Adjust padding for smaller screens */
+    }
+
+    .about-head {
+        font-size: 7vw; /* Adjust font size for smaller screens */
+    }
+
+    .about-body {
+        width: 90vw; /* Adjust the width for smaller screens */
+        font-size: 1em; /* Adjust font size for smaller screens */
+        margin-left: 5vw; /* Remove left margin for smaller screens */
+        padding-bottom: 10vh; /* Adjust padding for smaller screens */
+        line-height: 4vh; /* Adjust line height for smaller screens */
+    }
+}
