--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
     text-decoration: none;
     color: gold;
     font-size: 2vw;
-    margin-right: 20vw;
+    margin-right: 10vw;
     margin-left: 20vw;
 }
 
@@ -56,48 +56,51 @@
 }
 
 .saver {
-    margin-left: 4vw;
+    margin-left: 1vw;
 }
 
-@media (max-width:768px){
+@media (max-width: 1100px) {
     .dropdown {
         display: block;
-        margin-left: 5vw;
-    }
-    .saver {
-        margin-left: 4vw;
+        width: 10vw;
+        margin-left: -18vw;
+        height: 6vh;
+        font-size: 3.5vw;
     }
 
-    .link-about {
-        display: none;
+    .saver {
+        margin-left: 2vw;
     }
-    .bot {
-        margin-left: -6vw;
-    }
-    .link-contact {
-        display: none;
-    }
+
+    .link-about,
+    .link-contact,
     .link-projects {
         display: none;
-        }
-    .link-name {
-        margin-left: 7vw;
+    }
 
+  
+
+    .link-name {
+        margin-left: 3vw;
     }
-    .link-name a:hover {
-        color: lightgoldenrodyellow;
-        font-size: 2.1vw;
+    .link-name a {
+        font-size: 3.5vw; /* Replicate font size for smaller screens */
+         /* Replicate right margin for smaller screens */
+        color: gold;
+        margin-left: 18vw; /* Replicate left margin for smaller screens */
     }
-    .line-header{
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    width: 100%;
-    max-width: 100vw; /* Adjust as needed */
-    margin: 0 auto; /* Center the container */
-    box-sizing: border-box;
-    height: 13vh;
-    padding-top: 4vh;
-    list-style-type: none;
+
+   
+    .line-header {
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        width: 100%;
+        max-width: 100vw; /* Adjust as needed */
+        margin: 0 auto; /* Center the container */
+        box-sizing: border-box;
+        height: 13vh;
+        padding-top: 4vh;
+        list-style-type: none;
     }
 }
