--- a/src/Body.css
+++ b/src/Body.css
@@ -48,3 +48,37 @@
     color: var(--body_color);
     margin-left: 9vw;
 }
+@media (max-width: 1100px) {
+    .content-head {
+        flex-direction: column; /* Stack content in a column on smaller screens */
+        padding-top: 20vh; /* Adjust the padding values as needed */
+        padding-bottom: 5vh;
+        padding-left: 6vw;
+    }
+
+    .content-logo {
+        margin-right: 0;
+        margin-left: 0;
+        font-size: 12vw; /* Adjust font size for smaller screens */
+        margin-bottom: 5vh;
+    }
+
+    .header {
+        width: 80%; /* Adjust the width as needed for smaller screens */
+    }
+
+    .head {
+        letter-spacing: 0.2vw; /* Adjust letter spacing as needed */
+    }
+
+    .discover {
+        margin-top: 5vh; /* Adjust margin values as needed */
+        margin-left: 0;
+        margin-bottom: 5vh;
+        font-size: 7vw; /* Adjust font size for smaller screens */
+    }
+
+    .footer {
+        margin-left: 0;
+    }
+}
