--- a/src/Contact.css
+++ b/src/Contact.css
@@ -43,3 +43,38 @@
     margin-top: 50vh;
     margin-left: -12vw;
 }
+
+@media (max-width: 1100px) {
+    .contact-header {
+        flex-direction: column; /* Stack content in a column on smaller screens */
+        padding-top: 20vh; /* Adjust padding values for smaller screens */
+         /* Adjust padding values for smaller screens */
+    }
+
+    .contact-logo {
+        margin-left: 10vw;
+        margin-right: 10vw;
+        padding-bottom: 5vh;
+    }
+
+    .contact-content {
+        margin-left: 15vw;
+    }
+
+    .contact-head {
+        font-size: 7vw; /* Adjust font size for smaller screens */
+        margin-top: 0; /* Remove the negative margin-top */
+        margin-bottom: 2.5vh;
+    }
+
+    .contact-email {
+        font-size: 5vw; /* Adjust font size for smaller screens */
+        margin-top: 0; /* Remove the negative margin-top */
+        margin-bottom: 2.5vh;
+    }
+
+    .contact-name {
+        margin-top: 20vh; /* Adjust margin-top for smaller screens */
+        margin-left: 0; /* Remove left margin for smaller screens */
+    }
+}
