--- a/src/Projects.css
+++ b/src/Projects.css
@@ -133,3 +133,68 @@ h5 {
 .repo:hover {
     color: #333333;
 }
+@media (max-width: 1100px) {
+    .project-content {
+        width: 90vw; /* Adjust the width for smaller screens */
+        margin-left: 5vw; /* Remove left margin for smaller screens */
+    }
+
+    .project-head {
+        font-size: 7vw; /* Adjust font size for smaller screens */
+        padding-top: 2.5vh;
+    }
+
+    .project-body {
+        line-height: 4vh; /* Adjust line height for smaller screens */
+        font-size: 4vw;
+        width: 80vw;
+        margin-left: 5vw;
+    }
+
+    .img {
+        width: 50vw; /* Adjust image width for smaller screens */
+        height: auto;
+    }
+
+    .calculator,
+    .tipcalculator,
+    .dom,
+    .fusion,
+    .drum {
+        width: 75vw; /* Adjust width for smaller screens */
+        margin-left: 15vw;
+        margin-top: 3vh; /* Adjust margin-top for smaller screens */
+    }
+    .calculator h5,
+    .tipcalculator h5,
+    .dom h5,
+    .fusion h5,
+    .drum h5 {
+        width: 75vw; /* Adjust width for smaller screens */
+        margin-left: 0;
+        margin-top: 3vh; /* Adjust margin-top for smaller screens */
+        font-size: 4vw;
+        padding-bottom: 3vh;
+    }
+    .calculator p,
+    .tipcalculator p,
+    .dom p,
+    .fusion p,
+    .drum p {
+        width: 65vw; /* Adjust width for smaller screens */
+        margin-left: 0;
+        margin-top: 3vh; /* Adjust margin-top for smaller screens */
+        font-size: 4vw;
+        padding-bottom: 3vh;
+    }
+    .live {
+        font-size: 5vw; /* Adjust font size for smaller screens */
+        margin-top: 2vh; /* Adjust margin-top for smaller screens */
+        margin-right: 2vw; /* Adjust margin-right for smaller screens */
+    }
+    .repo {
+        font-size: 5vw; /* Adjust font size for smaller screens */
+        margin-top: 2vh; /* Adjust margin-top for smaller screens */
+        margin-left: 5vw; /* Adjust margin-right for smaller screens */
+    }
+}
