--- a/src/Projects.css
+++ b/src/Projects.css
@@ -34,8 +34,8 @@
 }
 
 .img {
-    width: 20vw;
-    height: 25vh;
+    width: auto;
+    height: auto;
 }
 
 .calculator {
@@ -48,7 +48,7 @@
    transition: all .2s ease-in;
    cursor: pointer;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-   padding: 1vw;
+   padding: 3vw;
 }
 
 .tipcalculator {
@@ -61,7 +61,7 @@
     transition: all .2s ease-in;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 1vw;
+    padding: 3vw;
 }
 
 .dom {
@@ -74,7 +74,7 @@
     transition: all .2s ease-in;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 1vw;
+    padding: 3vw;
 }
 
 .fusion {
@@ -87,7 +87,7 @@
     transition: all .2s ease-in;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 1vw;
+    padding: 3vw;
 }
 
 .drum {
@@ -101,13 +101,14 @@
     transition: all .2s ease-in;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 1vw;
+    padding: 3vw;
 }
 
 h5 {
     color: var(--body_color);
     font-size: 2vw;
     letter-spacing: 0.3vw;
+    padding-bottom: 2vh;
 }
 
 .live {
