--- a/src/Body.css
+++ b/src/Body.css
@@ -48,7 +48,7 @@
     color: var(--body_color);
     margin-left: 9vw;
 }
-@media (max-width: 1100px) {
+@media (max-width: 950px) {
     .content-head {
         flex-direction: column; /* Stack content in a column on smaller screens */
         padding-top: 20vh; /* Adjust the padding values as needed */
@@ -82,6 +82,7 @@
 
     .body {
         font-size: 4vw;
+        line-height: 7vh;
     }
 
     .discover {
