--- a/src/App.css
+++ b/src/App.css
@@ -62,14 +62,14 @@
 @media (max-width: 950px){
     .dropdown {
         display: block;
-        width: 10vw;
-        margin-left: -18vw;
-        height: 10vh;
+        width: fit-content;
+        height: fit-content;
         font-size: 3.5vw;
     }
 
     .saver {
         margin-left: 2vw;
+        margin-right: 30vw;
     }
 
     .link-about,
@@ -87,7 +87,7 @@
         font-size: 3.5vw; /* Replicate font size for smaller screens */
          /* Replicate right margin for smaller screens */
         color: gold;
-        margin-left: 18vw; /* Replicate left margin for smaller screens */
+        margin-left: -10vw; /* Replicate left margin for smaller screens */
     }
 
    
