--- a/src/Dropdown.css
+++ b/src/Dropdown.css
@@ -3,15 +3,15 @@
     position:relative;
     top: 0;
     left: 0;
-    margin-top: 3.3vw;
     margin-left: -80vw;
     margin-bottom: 5vw;
     width: 100vw;
     
 }
 .toggle {
-    width: 10vw;
-    height: 6vh;
+    width: fit-content;
+    height: fit-content;
+    margin:1rem 0 auto;
     font-size: 2.5vw;
     font-weight: 600;
     text-transform: capitalize;
@@ -25,8 +25,8 @@
 }
 .toggle:hover {
     cursor: pointer;
-    width: 13vw;
-    height: 7.5vh;
+    width: fit-content;
+    height:fit-content;
     background-color: burlywood;
 }
 
@@ -83,16 +83,16 @@
         position: relative;
         top: 0;
         left: 0;
-        margin-top: -0.1vw;
-        margin-left: -55vw; /* Adjust margin-left to cover the entire right side */
+        margin-left: -80vw; /* Adjust margin-left to cover the entire right side */
         margin-bottom: 5vw;
         width: 115vw;
+        margin-top: 2vh;
     }
 
     .toggle {
-        width: 13vw;
-        margin-left: 25vw;
-        height: 7.5vh;
+        width: fit-content;
+        margin: 0 1rem auto;
+        height: fit-content;
         font-size: 4vw;
         font-weight: 600;
         text-transform: capitalize;
