--- a/src/Dropdown.css
+++ b/src/Dropdown.css
@@ -91,7 +91,7 @@
 
     .toggle {
         width: fit-content;
-        margin: 0 1rem auto;
+        margin: -5rem 1rem auto;
         height: fit-content;
         font-size: 4vw;
         font-weight: 600;
